--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,34 @@
   <version>0.0.1</version>
   <name>knobot-j</name>
   <description>discord bot using jda</description>
+  
+  <properties>
+  	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+  	<maven.compiler.source>1.8</maven.compiler.source>
+  	<maven.compiler.target>1.8</maven.compiler.target>
+  </properties>
+  
+  <repositories>
+  	<repository>
+  		<snapshots>
+  			<enabled>false</enabled>
+  		</snapshots>
+  		<id>jcenter</id>
+  		<name>jcenter-bintray</name>
+  		<url>http://jcenter.bintray.com</url>
+  	</repository>
+  </repositories>
+  
+  <dependencies>
+  	<dependency>
+  		<groupId>net.dv8tion</groupId>
+  		<artifactId>JDA</artifactId>
+  		<version>3.8.3_463</version>
+		<type>jar</type>
+		<scope>compile</scope>
+  	</dependency>
+  </dependencies>
+  
   <build>
     <sourceDirectory>src</sourceDirectory>
     <plugins>
