--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,16 @@
 		<type>jar</type>
 		<scope>compile</scope>
   	</dependency>
+  	<dependency>
+  		<groupId>org.apache.logging.log4j</groupId>
+  		<artifactId>log4j-api</artifactId>
+  		<version>2.11.2</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>org.apache.logging.log4j</groupId>
+  		<artifactId>log4j-core</artifactId>
+  		<version>2.11.2</version>
+  	</dependency>
   </dependencies>
   
   <build>
