--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,11 @@
 		<scope>compile</scope>
   	</dependency>
   	<dependency>
+	    <groupId>org.glassfish.jersey.core</groupId>
+	    <artifactId>jersey-client</artifactId>
+	    <version>2.28</version>
+	</dependency>
+  	<dependency>
   		<groupId>org.apache.logging.log4j</groupId>
   		<artifactId>log4j-api</artifactId>
   		<version>2.11.2</version>
