--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,18 @@
       </plugin>
       <plugin>
       	<groupId>org.apache.maven.plugins</groupId>
+      	<artifactId>maven-jar-plugin</artifactId>
+      	<version>3.1.2</version>
+      	<configuration>
+      		<archive>
+      			<manifest>
+      				<mainClass>id.nap.discord.Knobot</mainClass>
+      			</manifest>
+      		</archive>
+      	</configuration>
+      </plugin>
+      <plugin>
+      	<groupId>org.apache.maven.plugins</groupId>
       	<artifactId>maven-shade-plugin</artifactId>
       	<version>3.2.1</version>
       	<executions>
