--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,15 @@
   
   <build>
     <sourceDirectory>src</sourceDirectory>
+    <resources>
+    	<resource>
+    		<directory>src</directory>
+    		<targetPath>${project.build.directory}</targetPath>
+    		<includes>
+    			<include>log4j2.xml</include>
+    		</includes>
+    	</resource>
+    </resources>
     <plugins>
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
@@ -81,18 +90,6 @@
       </plugin>
       <plugin>
       	<groupId>org.apache.maven.plugins</groupId>
-      	<artifactId>maven-jar-plugin</artifactId>
-      	<version>3.1.2</version>
-      	<configuration>
-      		<archive>
-      			<manifest>
-      				<mainClass>id.nap.discord.Knobot</mainClass>
-      			</manifest>
-      		</archive>
-      	</configuration>
-      </plugin>
-      <plugin>
-      	<groupId>org.apache.maven.plugins</groupId>
       	<artifactId>maven-shade-plugin</artifactId>
       	<version>3.2.1</version>
       	<executions>
@@ -101,6 +98,14 @@
       			<goals>
       				<goal>shade</goal>
       			</goals>
+      			<configuration>
+      				<transformers>
+      					<transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
+      					<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+      						<mainClass>id.nap.discord.Knobot</mainClass>
+      					</transformer>
+      				</transformers>
+      			</configuration>
       		</execution>
       	</executions>
       </plugin>
