--- a/pom.xml
+++ b/pom.xml
@@ -93,7 +93,7 @@
       				<transformers>
       					<transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
       					<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-      						<mainClass>main.java.id.nap.discord.Knobot</mainClass>
+      						<mainClass>id.nap.discord.Knobot</mainClass>
       					</transformer>
       				</transformers>
       			</configuration>
